<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.DesenvolvedorActivity">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp">
        <EditText
                android:id="@+id/nomeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:backgroundTint="@color/colorAccent"
                android:maxLength="100"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="55dp"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyzÇçÉéãÃçÇ"/>
    </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/sobrenomeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sobrenome"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorAccent"
                    android:backgroundTint="@color/colorAccent"
                    android:maxLength="100"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="55dp"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyzÇçÉéãÃçÇ"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorAccent"
                    android:backgroundTint="@color/colorAccent"
                    android:maxLength="100"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="55dp"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789Çç_-@."/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/senhaEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/senha"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorAccent"
                    android:backgroundTint="@color/colorAccent"
                    android:maxLength="20"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="55dp"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/cpfEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cpf"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorAccent"
                    android:backgroundTint="@color/colorAccent"
                    android:maxLength="100"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="55dp"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/cepEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cep"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorAccent"
                    android:backgroundTint="@color/colorAccent"
                    android:maxLength="9"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="55dp"
                    android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/ruaEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rua"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorAccent"
                    android:backgroundTint="@color/colorAccent"
                    android:maxLength="100"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="55dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/numeroEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/numero"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorAccent"
                    android:backgroundTint="@color/colorAccent"
                    android:maxLength="20"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="55dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/complementoEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/complemento"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorAccent"
                    android:backgroundTint="@color/colorAccent"
                    android:maxLength="50"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="55dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/bairroEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bairro"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorAccent"
                    android:backgroundTint="@color/colorAccent"
                    android:maxLength="100"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="55dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/cidadeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cidade"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorAccent"
                    android:backgroundTint="@color/colorAccent"
                    android:maxLength="100"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="55dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/estadoEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/estado"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorAccent"
                    android:backgroundTint="@color/colorAccent"
                    android:maxLength="100"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="55dp"/>
        </android.support.design.widget.TextInputLayout>



        <Button android:id="@+id/salvarDevButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_padrao"
                android:text="@string/salvar"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:textColor="@color/colorTextPrimary"/>
    </LinearLayout>
</ScrollView>